fix: fix getRaceRunners endpoint
